crates/credential/tests/probes/slot_cross_protocol.stderr
error[E0308]: mismatched types
  --> tests/probes/slot_cross_protocol.rs:42:22
   |
42 |     bind_stripe_slot(twilio);
   |     ---------------- ^^^^^^ expected `CredentialGuard<StripeScheme>`, found `CredentialGuard<TwilioScheme>`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected struct `CredentialGuard<StripeScheme>`
              found struct `CredentialGuard<TwilioScheme>`
note: function defined here
  --> tests/probes/slot_cross_protocol.rs:35:4
   |
35 | fn bind_stripe_slot(_guard: CredentialGuard<StripeScheme>) {}
   |    ^^^^^^^^^^^^^^^^ -------------------------------------
